// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slider > renders the base track 1`] = `
<input
  aria-label="Opacity"
  class="slider"
  max="100"
  min="0"
  step="1"
  type="range"
  value="40"
/>
`;

exports[`Slider > renders the hue track 1`] = `
<input
  aria-label="Hue"
  class="slider slider__hue"
  max="360"
  min="0"
  step="1"
  type="range"
  value="180"
/>
`;

exports[`Slider > renders the thick variant 1`] = `
<input
  aria-label="Intensity"
  class="slider slider--thick"
  max="200"
  min="0"
  step="5"
  type="range"
  value="60"
/>
`;
